--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-html {
-  touch-action: manipulation;
-}
 #game-container {
     display: flex;
     flex-direction: column;
@@ -46,3 +43,68 @@ html {
     justify-content: center;
     margin-bottom: 20px;
 }
+#result {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    /*place-items: center;*/
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    display: none;
+}
+#result-bg{
+    background-color: rgb(0, 0, 0, 0.6);
+    opacity: 0.4;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.result-content{
+    background-color: #f4f4f4;
+    margin: 15% auto;
+    width: 50%;
+    z-index: 100;
+    box-shadow: 0 2px 7px black;
+    animation-name: popup;
+    animation-duration: 1.1s;
+    
+}
+@keyframes popup{
+    from{
+        transform: translateY(150%);
+        opacity 0;
+    }
+    to{
+        opacity 1;
+    }
+}
+
+.result-header{
+    margin: 0;
+    padding: 3px 15px;
+    background-color: pink;
+    display: flex;
+    justify-content: space-between;
+    
+    
+}
+
+.result-header h1{
+    font-size: 1.3rem;
+    margin: 10px 0;
+}
+
+#result-close{
+    font-size: 1.3rem;
+    cursor: pointer;
+}
+.result-body{
+    padding: 15px 25px;
+}
+
+
