--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ html {
 #count {
     display: flex;
     width: 100%;
+    height: auto;
     justify-content: center;
     align-items: center;
 }
