--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,8 @@ html {
 .result-content{
     background-color: #f4f4f4;
     margin: 15% auto;
-    width: 50%;
+    width: 60%;
+    max-width: 500px;
     z-index: 100;
     box-shadow: 0 2px 7px black;
     animation-name: popup;
