--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ html {
     cursor: pointer;
 }
 #fukidashi{
-    width: 250px;
+    max-width:250px;
+    min-width: 220px;
     height: auto;
     position: relative;
 }
