--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ html {
 }
 #fukidashi p{
     position: absolute;
-    font-size: 18px;
+    font-size: clamp(1px, 3vw, 18px);
     padding: 0;
     margin: 0;
     transform: translate(-50%,-50%);
