--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ html {
     transform: translate(-50%,-50%);
 }
 #countSelect_p{
-    top: 20%;
+    top: 30%;
     left: 50%;
 }
 #nowScore_p{
@@ -49,10 +49,11 @@ html {
 #total-score-area{
     flex-direction:column;
     color: #984AA0;
+    display: grid;
+    font-size: 18px;
 }
 #total-score {
     text-align: right;
-    font-size: 25px;
     margin: 0 0 5px 0 !important;
 }
 #total-score p {
@@ -68,6 +69,7 @@ html {
     maegin: 0;
     width: 50px;
     color: #DA70D6;
+    font-size: 25;
 }
 #game-container {
     display: flex;
