--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ html {
     font-size: 18px;
 }
 #total-score {
-    text-align: right;
+    text-align: left;
     margin: 15px 0 0 0 !important;
 }
 #total-score p {
