--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ html {
 }
 
 #total-score {
-  text-align: left;
+  text-align: right;
   margin: 15px 0 0 0 !important;
   display: flex;
   align-items: center;
