--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ html {
 }
 
 #game-header div {
-  margin-left: 0px;
-  margin-right: 0px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 #youri {
@@ -71,7 +71,7 @@ html {
 }
 
 #total-score {
-  text-align: right;
+  text-align: left;
   margin: 15px 0 0 0 !important;
   display: flex;
   align-items: center;
@@ -81,8 +81,12 @@ html {
   margin: 0;
 }
 
+#prev-button-area{
+  margin-right: 30px;
+}
+
 #prev-button {
-  max-width: 35px;
+  max-width: 30px;
   cursor: pointer;
 }
 
@@ -261,9 +265,9 @@ html {
 }
 
 #size-select {
-  padding: 5px 5px;
+  padding: 0px 0px;
   font-size: 16px;
-  margin: 10px 40px 0 0;
+  margin: 0px 0px 0 0;
 }
 
 fieldset {
