--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,61 @@ html {
   padding: 15px 25px;
 }
 
+#ranking {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  /* place-items: center; */
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  display: none;
+}
+
+#ranking-bg {
+  background-color: rgb(0, 0, 0, 0.6);
+  opacity: 0.4;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+.ranking-content {
+  background-color: #f4f4f4;
+  margin: 15% auto;
+  width: 70%;
+  max-width: 500px;
+  z-index: 100;
+  box-shadow: 0 2px 7px black;
+  animation-name: popup;
+  animation-duration: 1.1s;
+}
+
+.ranking-header {
+  margin: 0;
+  padding: 3px 15px;
+  background-color: pink;
+  display: flex;
+  justify-content: space-between;
+}
+
+.ranking-header h1 {
+  font-size: 1.3rem;
+  margin: 10px 0;
+}
+
+#ranking-close {
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.ranking-body {
+  padding: 15px 25px;
+}
+
 .right {
   text-align: right;
 }
